# SupplyChainCourse

./: README.md
Cours1-PremierProjetUV/: README.md  exerciceTrianglePascal.py  hello.py  pyproject.toml
Cours2/: Sudoku.py  TraverseeRiviere.py  hello.py  pyproject.toml  sudoku.py  test_TraverseeRiviere.py  test_sudoku.py  test_traverser.py  traverserriviere.py
Mine/: data.py  demo2.py  pyproject.toml  reseau.py  test,.py
Mine/projetmine/: __init__.py  app.py  data.py  reseau.py
ProjetMine/: data_entreprises.csv  demo.py  demo2.py  pyproject.toml
ProjetMine/src/projetmine/: __init__.py  app.py  data.py  reseau.py
ProjetRATP/: ProgDynamique.ipynb  README.md  Untitled-1.ipynb  demo.py  demo2.py  pyproject.toml
ProjetRATP/examples/: demo.py  demo3.py
ProjetRATP/src/projetratp/: __init__.py  __main__.py  affichage.py  app.py  main.py  ratp.py  sqlimport.py
ProjetRATP/test/: test_ratp.py
ProjetSolitaire/: .coverage  Untitled.ipynb  deepcopy.ipynb  demo.py  pyproject.toml  solitaire.py  test_solitaire.py
ProjetSolitaire/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
ProjetSolitaire/botSolitaire/: .coverage  demo.py  pyproject.toml
ProjetSolitaire/botSolitaire/src/botsolitaire/: __init__.py  solitaire.py
ProjetSolitaire/botSolitaire/test/: test_solitaire.py
projetgateau/: pyproject.toml
projetgateau/examples/: demo.py
projetgateau/src/projetgateau/: __init__.py  demo.py  recettes.py
projets/: .~lock.Liste_Inscrits_DM1ECE_24_M1_Economie_de_l'entreprise_et_des_marchés_parcours_économiste_d'entreprise.ods#  attribution.py
projets/04/: pyproject.toml
projets/04/src/: data.py
projets/04/src/04/: __init__.py
