[project]
name = "projetmine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Theo Girard", email = "girard-theo@orange.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.15.2",
]

[project.scripts]
projetmine = "projetmine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
