[project]
name = "projetgateau"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Theo Girard", email = "girard-theo@orange.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "graphlib>=0.9.5",
    "typing>=3.10.0.0",
]

[project.scripts]
projetgateau = "projetgateau:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
