[project]
name = "botsolitaire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Theo Girard", email = "girard-theo@orange.fr" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
botsolitaire = "botsolitaire:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
